currentTrip.jsp - Add the end trip button before unlock the vehicle. default.css - Fix elements alignments. StrripesResources -  Change damage report labels. car_damages_*.zul -  Window new size.

--- a/war/src/main/webapp/css/default.css
+++ b/war/src/main/webapp/css/default.css
@@ -1050,6 +1050,7 @@ nav.panelPicture ul li.detail {
 nav.panel ul li.detail span,
 nav.panelPicture ul li.detail span {
 	display: inline-block;
+	padding-left: 10px;
 }
 
 nav.panel ul li.detail span:nth-child(1) {
